[tool.poetry]
name = "rebalance-sim"
version = "0.1.0"
description = ""
authors = ["Kevin Porter <kporter@aerospike.com>"]
readme = "README.md"
packages = [{include = "rebalance_sim"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[pycodestyle]
ignore = "D100,D103,E501"
max-line-length = 80
